--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,9 @@ hexyl = "0.8"
 structopt = "0.3"
 
 [dependencies.regex]
-version = "1.3"
+version = "1.4"
 default-features = false
 features = ["std"]
 
 [profile.release]
-lto = true
-codegen-units = 1
+lto = "thin"
