update hexyl to use my fork with no default features
Updates hexyl to v0.9.0 and switch to my fork which puts CLI-needed
dependencies into a "cli" feature that can be turned off.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1"
-hexyl = "0.8"
+hexyl = { git = "https://github.com/aswild/hexyl", default-features = false }
 structopt = "0.3"
 
 [dependencies.regex]
