update to clap 3.2
Use value_parser instead of parse(from_os_str), and just directly let
clap handle parsing the range, its error messages are somewhat better
now.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1"
 hexyl = { git = "https://github.com/aswild/hexyl", default-features = false }
-clap = { version = "3", features = ["cargo", "derive"] }
+clap = { version = "3", features = ["cargo", "derive", "deprecated"] }
 
 [dependencies.regex]
 version = "1.4"
