rework IO handling for massive performance gains
End-to-end speedup when copying large (multi-gigabyte files) is around
4X, making bcut essentially as fast as cat.

The biggest improvement is a custom io_copy() implementation that's
naive but uses a 1M buffer instead of the 8K that std::io::copy() uses.
This alone is nearly a 3X speedup.

Additional improvements come from some low-level file descriptor based
handling of stdout rather than std::io::{Stdin,Stdout} objects. Rust's
stdio is always line-buffered, and time is wasted in LineWriter looking
for newlines. Also Rust's stdio objects have global mutexes which takes
more time too (though always holding a StdoutLock helps somewhat).
Bypass all of that by using raw file descriptors inside a std::fs::File
(which is implemented as just a raw fd internally anyway).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 anyhow = "1"
 hexyl = { git = "https://github.com/aswild/hexyl", default-features = false }
 clap = { version = "3.2", features = ["cargo", "derive"] }
+libc = "0.2"
 
 [dependencies.regex]
 version = "1.6"
@@ -17,3 +18,4 @@ features = ["std"]
 
 [profile.release]
 lto = "thin"
+debug = 2
