replace regex parsing with nom
I'm not sure if I actually like this better because it gives pretty
mediocre error messages, but I really wanted to try playing with making
a useful parser with nom and tonight was the night to try that out.

The good news is it works and passes all my existing tests, and
I actually understand all of the code here.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ anyhow = "1.0.75"
 clap = { version = "4.4", features = ["cargo", "derive"] }
 hexyl = { git = "https://github.com/aswild/hexyl", default-features = false }
 libc = "0.2"
-regex = { version = "1.9", default-features = false, features = ["std"] }
+nom = "7.1"
+thiserror = "1.0.48"
 
 [profile.release]
 lto = "thin"
