replace unsafe libc code with safe rustix code
Thanks to OwnedFd and other io-safety conventions, I can do the
dup/lseek logic for unbuffered stdio without needing any unsafe code.
Rustix is also kinda neat in that it does syscalls directly rather than
routing through libc (and its thread-local errno global).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 anyhow = "1.0.75"
 clap = { version = "4.4", features = ["cargo", "derive"] }
 hexyl = { git = "https://github.com/aswild/hexyl", default-features = false }
-libc = "0.2"
 nom = "7.1"
+rustix = { version = "0.38", features = ["fs", "stdio"] }
 thiserror = "1.0.48"
 
 [profile.release]
